--- a/.github/workflows/test-build-docker.yml
+++ b/.github/workflows/test-build-docker.yml
@@ -71,7 +71,7 @@ jobs:
       uses: actions/checkout@v4
     
     - name: Download artifact from the maven-build job
-      uses: actions/checkout@v4
+      uses: actions/download-artifact@v3
       with:
         name: java-app
     
